--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 keywords = ["appveyor","cli","happv"]
 license = "Apache-2.0"
 [dependencies]
-# happv = "0.1"
+happv = "0.1"
 # local dev
-happv = { path = "/Users/booyaa/Dev/rust/foundry/happv" }
+# happv = { path = "/Users/booyaa/Dev/rust/foundry/happv" }
 log = "0.3"
 env_logger = "0.3"
 clap = "2.9"
