--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "betsy"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
 description = "An AppVeyor cli written in Rust"
 repository = "https://github.com/booyaa/betsy"
@@ -15,3 +15,4 @@ log = "0.3"
 env_logger = "0.3"
 clap = "2.9"
 dotenv = "*"
+rust-ini = "*"
